Refactor styles and HTML structure across various components
- Updated SCSS files for feeds and notifications to improve readability and maintainability by consolidating grid-template-columns.
- Enhanced HTML structure in profile edit and header components for better formatting and consistency.
- Cleaned up TypeScript files by removing unnecessary empty method bodies and ensuring consistent formatting.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -26,7 +26,6 @@ nav {
 }
 
 @media (display-mode: window-controls-overlay) {
-
   /** This is for when the app is running in a window with custom title bar controls. */
   .app-container {
     padding-top: env(titlebar-area-height, 33px);
@@ -45,7 +44,8 @@ nav {
   /* Prevent horizontal scrolling */
 
   // Make space for mobile nav when on mobile
-  @media (max-width: 599px) {}
+  @media (max-width: 599px) {
+  }
 }
 
 // Configure mat-sidenav-content to be a flex container
@@ -357,7 +357,9 @@ mat-sidenav-content {
   font-size: 64px;
   height: 64px;
   width: 64px;
-  color: var(--mat-card-title-text-color); // Changed from fixed white color to theme-dependent variable
+  color: var(
+    --mat-card-title-text-color
+  ); // Changed from fixed white color to theme-dependent variable
 }
 
 .profile-header h2 {
@@ -508,7 +510,8 @@ mat-sidenav-content {
   90% {
     opacity: 1;
     transform: scale(1) rotate(360deg);
-    border-color: var(--mat-sys-primary) var(--mat-sys-primary) var(--mat-sys-primary) var(--mat-sys-primary);
+    border-color: var(--mat-sys-primary) var(--mat-sys-primary)
+      var(--mat-sys-primary) var(--mat-sys-primary);
   }
 
   100% {
