--- a/src/app/pages/feeds/feeds.component.scss
+++ b/src/app/pages/feeds/feeds.component.scss
@@ -159,7 +159,8 @@ app-user-profile {
         height: 3px;
       }
 
-      &::-webkit-scrollbar-thumb {}
+      &::-webkit-scrollbar-thumb {
+      }
 
       .column-selector-button {
         display: flex;
@@ -178,10 +179,12 @@ app-user-profile {
         &.active {
           // background-color: var(--mat-sys-primary);
 
-          mat-icon {}
+          mat-icon {
+          }
         }
 
-        &:hover:not(.active) {}
+        &:hover:not(.active) {
+        }
 
         &.add-column {
           min-width: 40px;
@@ -815,7 +818,8 @@ app-user-profile {
           background-color: var(--mat-sys-primary);
         }
 
-        &:hover:not(.active) {}
+        &:hover:not(.active) {
+        }
       }
     }
 
@@ -953,7 +957,8 @@ app-user-profile {
         height: 3px;
       }
 
-      &::-webkit-scrollbar-thumb {}
+      &::-webkit-scrollbar-thumb {
+      }
 
       // Prevent reflow during drag
       &.cdk-drop-list-dragging {
@@ -1005,7 +1010,8 @@ app-user-profile {
         }
       }
 
-      &:hover:not(.active):not(.add-tab) {}
+      &:hover:not(.active):not(.add-tab) {
+      }
 
       &.add-tab {
         padding: 12px 8px;
@@ -1161,7 +1167,8 @@ app-user-profile {
   transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.columns-wrapper.cdk-drop-list-dragging .column-unit:not(.cdk-drag-placeholder) {
+.columns-wrapper.cdk-drop-list-dragging
+  .column-unit:not(.cdk-drag-placeholder) {
   transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
 
