--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,14 +1,22 @@
 <div class="welcome">
   <div class="welcome-backdrop">
     <div class="welcome-top">
-      <button class="welcome-theme-button" mat-icon-button (click)="themeService.toggleDarkMode()">
+      <button
+        class="welcome-theme-button"
+        mat-icon-button
+        (click)="themeService.toggleDarkMode()"
+      >
         @if (themeService.darkMode()) {
-        <mat-icon>dark_mode</mat-icon>
+          <mat-icon>dark_mode</mat-icon>
         } @else {
-        <mat-icon>light_mode</mat-icon>
+          <mat-icon>light_mode</mat-icon>
         }
       </button>
-      <button class="welcome-close-button" mat-icon-button (click)="skipToEnd()">
+      <button
+        class="welcome-close-button"
+        mat-icon-button
+        (click)="skipToEnd()"
+      >
         <mat-icon>close</mat-icon>
       </button>
     </div>
@@ -30,19 +38,19 @@
           <div class="step-subtitle">{{ currentStep.subtitle }}</div>
 
           @for (paragraph of currentStep.content; track $index) {
-          <p>{{ paragraph }}</p>
+            <p>{{ paragraph }}</p>
           }
 
           <!-- Features List -->
           @if (currentStep.features.length > 0) {
-          <div class="step-features">
-            @for (feature of currentStep.features; track feature.icon) {
-            <div class="feature-item">
-              <mat-icon class="feature-icon">{{ feature.icon }}</mat-icon>
-              <span class="feature-text">{{ feature.text }}</span>
+            <div class="step-features">
+              @for (feature of currentStep.features; track feature.icon) {
+                <div class="feature-item">
+                  <mat-icon class="feature-icon">{{ feature.icon }}</mat-icon>
+                  <span class="feature-text">{{ feature.text }}</span>
+                </div>
+              }
             </div>
-            }
-          </div>
           }
         </div>
       </div>
@@ -50,23 +58,27 @@
 
     <div class="welcome-footer">
       <div class="step-indicator">
-        @if (currentWizardStep() <= totalWizardSteps()) { Step {{ currentWizardStep() }} of {{ totalWizardSteps() }} }
-          </div>
+        @if (currentWizardStep() <= totalWizardSteps()) {
+          Step {{ currentWizardStep() }} of {{ totalWizardSteps() }}
+        }
+      </div>
 
-          <div class="welcome-actions">
-            @if (currentWizardStep() === 1) {
-            <!-- First step actions -->
-            <button mat-flat-button (click)="nextStep()">Continue</button>
-            } @else if (currentWizardStep() === totalWizardSteps()) {
-            <!-- Last step actions -->
-            <button mat-button (click)="previousStep()">Back</button>&nbsp;
-            <button mat-flat-button (click)="completeWizard()">Start Using Nostria</button>
-            } @else {
-            <!-- Middle steps actions -->
-            <button mat-button (click)="previousStep()">Back</button>&nbsp;
-            <button mat-flat-button (click)="nextStep()">Continue</button>
-            }
-          </div>
+      <div class="welcome-actions">
+        @if (currentWizardStep() === 1) {
+          <!-- First step actions -->
+          <button mat-flat-button (click)="nextStep()">Continue</button>
+        } @else if (currentWizardStep() === totalWizardSteps()) {
+          <!-- Last step actions -->
+          <button mat-button (click)="previousStep()">Back</button>&nbsp;
+          <button mat-flat-button (click)="completeWizard()">
+            Start Using Nostria
+          </button>
+        } @else {
+          <!-- Middle steps actions -->
+          <button mat-button (click)="previousStep()">Back</button>&nbsp;
+          <button mat-flat-button (click)="nextStep()">Continue</button>
+        }
       </div>
     </div>
   </div>
+</div>
